<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ashvia.quizee.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.ashvia.quizee.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.ashvia.quizee.ui.leaderboard.LeaderboardFragment"
        android:label="@string/title_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />
    <fragment
        android:id="@+id/navigation_question"
        android:name="com.ashvia.quizee.ui.questtion.QuestionFragment"
        android:label="@string/title_question"
        tools:layout="@layout/fragment_question" />
    <fragment
        android:id="@+id/navigation_question_editor"
        android:name="com.ashvia.quizee.ui.editor.QuestionEditorFragment"
        android:label="@string/question_editor"
        tools:layout="@layout/fragment_question_editor" />
</navigation>