<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.editor.QuestionEditorDialogFragment">

    <EditText
        android:id="@+id/question_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/question"
        android:inputType="textMultiLine"
        android:lines="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_option"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/option_info"
        android:textColor="@color/primary"
        android:textSize="11sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/question_answer"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/question_option_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/option_a"
                    android:inputType="text"
                    android:padding="10dp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/question_option_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/option_b"
                    android:inputType="text"
                    android:padding="10dp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/question_option_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/option_c"
                    android:inputType="text"
                    android:padding="10dp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/question_option_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/option_d"
                    android:inputType="text"
                    android:padding="10dp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_reward"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/question_reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_point"
            android:inputType="number"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_time_limit"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/question_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_second"
            android:inputType="number"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_save"
        tools:ignore="TextContrastCheck" />
</LinearLayout>